TEST_PROGRAMS/INVALID/teng_long/bad_1.min
# variable not declared before use

x = 10;
var x : int;

